crates/plurimus_2d/tests/snapshots/render2d__braille_cameras_render_pixels_at_dot_resolution.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: composed_frame(&app)
---
  ▄▀  ⢀⠔
▄▀▀ ⢀⠔⠁
