crates/plurimus_2d/tests/snapshots/render2d__glyph_blocks_stamp_centered_with_transparent_holes.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: composed_frame(&app)
---
       
  /-\  
  |.|  
  \-/
