crates/plurimus_2d/tests/snapshots/render2d__glyphs_draw_over_pixels.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: styled_frame(&app)
---
 X 
--
aba
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
b: fg:Some(White) bg:Some(Reset) mods:NONE
