crates/plurimus_2d/tests/snapshots/render2d__glyphs_project_around_an_offset_camera.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: frame(&app)
---
         
      #  
    @    
 ~
