crates/plurimus_2d/tests/snapshots/render2d__pixel_blocks_clip_at_the_viewport_edge.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: composed_styled_frame(&app)
---
▀   
    
--
abbb
bbbb
a: fg:Some(Red) bg:Some(Red) mods:NONE
b: fg:Some(Reset) bg:Some(Reset) mods:NONE
