crates/plurimus_2d/tests/snapshots/render2d__pixel_blocks_stamp_centered_with_transparent_holes.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: composed_styled_frame(&app)
---
 ▄▄▄ 
 ▀▄▀ 
--
abcba
adcda
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
b: fg:Some(Red) bg:Some(Reset) mods:NONE
c: fg:Some(Blue) bg:Some(Reset) mods:NONE
d: fg:Some(Blue) bg:Some(Red) mods:NONE
