crates/plurimus_2d/tests/snapshots/render2d__pixels_and_pixel_blocks_share_one_z_order.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: composed_styled_frame(&app)
---
▀▀▀
--
abb
a: fg:Some(Green) bg:Some(Reset) mods:NONE
b: fg:Some(Red) bg:Some(Reset) mods:NONE
