crates/plurimus_2d/tests/snapshots/render2d__ragged_pixel_block_rows_pad_to_the_widest.snap
---
source: crates/plurimus_2d/tests/render2d.rs
expression: composed_styled_frame(&app)
---
▄▄▄▄ 
▀    
--
aaaab
cbbbb
a: fg:Some(Red) bg:Some(Reset) mods:NONE
b: fg:Some(Reset) bg:Some(Reset) mods:NONE
c: fg:Some(Blue) bg:Some(Reset) mods:NONE
